added assets for publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -51,20 +51,24 @@ Our approaches are applicable without requiring any architectural modifications,
 	abstract = {Labeling images for every new task or data pattern a model needs to learn is a significant time bottleneck in real-world applications. Moreover, acquiring the necessary data for training the models can be challenging. Ideally, one would train the models with simulated images and adapt them for the desired real tasks using the least possible amount of data. Active learning can be used to solve this problem with minimal effort. In this work, we train SegFormer for pipeline segmentation with synthetic images from an underwater simulated environment and fine-tune the model with real underwater pipeline images recorded in a marina. 
 The evaluation shows that selecting real data with active learning for fine-tuning the model gives better results than randomly selecting the images. As part of the work, we release the dataset recorded in the marina, MarinaPipe, which will be publicly available.},
 	author = {Marnet, Luiza Ribeiro and Graßhof, Stella and Brodskiy, Yuri and Wąsowski, Andrzej},
-	month = may,
+	month = April,
 	year = {2024},
-	booktitle = {Oceans}
+	booktitle = {Oceans},
+	preview={2024_marnet_oceans.jpg},
+	pdf={2024_marnet_oceans.pdf},
+	website={https://github.com/remaro-network/MarinaPipe-dataset}
 }
 
 @inproceedings{marnet_uncertainty_2024,
+title={Uncertainty Driven Active Learning for Image Segmentation in Underwater Inspection},
 author="Ribeiro Marnet, Luiza
 and Brodskiy, Yury
 and Grasshof, Stella
 and W{\k{a}}sowski, Andrzej",
 editor="Filipe, Joaquim
 and R{\"o}ning, Juha",
-title="Uncertainty Driven Active Learning for Image Segmentation in Underwater Inspection",
 booktitle="Robotics, Computer Vision and Intelligent Systems",
+month={Februrary},
 year="2024",
 publisher="Springer Nature Switzerland",
 address="Cham",
