update papers and assets

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@ Our findings show that Inception V3 slightly outperforms MobileNet V2, which sug
 	title = {A stroke of genius: Predicting the next move in badminton},
 	abstract = {This paper presents, {RallyTemPose}, a transformer encoder-decoder model for predicting future badminton strokes based on previous rally actions. The model uses court position, skeleton poses, and player-specific embeddings to learn stroke and player-specific latent representations in a spatiotemporal encoder module. The representations are then used to condition the subsequent strokes in a decoder module through rally-aware fusion blocks, which provide additional relevant strategic and technical considerations to make more informed predictions. RallyTemPose shows improved forecasting accuracy compared to traditional sequential methods on two real-world badminton datasets. The performance boost can also be attributed to the inclusion of improved stroke embeddings extracted from the latent representation of a pre-trained large-language model subjected to detailed text descriptions of stroke descriptions. In the discussion, the latent representations learned by the encoder module show useful properties regarding player analysis and comparisons.},
 	booktitle = {2024 {IEEE}/{CVF} {Conference} on {Computer} {Vision} and {Pattern} {Recognition} {Workshops} ({CVPRW})},
-	author = {Ibh, Magnus and Graßhof, Stella and Witzner, Dan, and Madeleine, Pascal},
+	author = {Ibh, Magnus, and Graßhof, Stella, and Witzner, Dan},
 	month = jun,
 	year = {2024},
     selected={true},
