--- a/_drafts/2024-07-28-grateful.md
+++ b/_drafts/2024-07-28-grateful.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Being Grateful and Feeling Rich
+title: Being Grateful
 date: 2024-07-28 12:00:00
 description: reflection
 tags: mentalhealth
