--- a/_posts/2024-10-25-poster.md
+++ b/_posts/2024-10-25-poster.md
@@ -8,20 +8,23 @@ categories: work
 code_diff: true
 ---
 
+You have to prepare a scientific poster and don't know where to start?
+
 Here I describe my approach in creating posters for conferences. 
-This is certainly not the best approach for everyone, but it works for me, and hopefully this provides some inspiration for you.
+While it might not the best approach for everyone, it works for me, and hopefully provides some inspiration for you. 
 
-## TLDR; Step-by-step
+## Short Step-by-step Guide
 
-Without focussing on the content.
+Without focussing on the content too much do the following:
 
-1. set up a poster template PowerPoint
-2. print the paper in color on page layout
-3. distribute the pages of the paper
-4. cut out parts of the paper
-5. re-arrange parts on a big surface of choice (floor, table, whiteboard with magnets) until the layout is finished
-6. arrange elements in PowerPoint correspondingly
-7. collect feedback
+1. Set up a poster template PowerPoint. This provides an empty digital canvas.
+2. Print the publication in color one page layout.
+3. Distribute the single pages in a space (floor, whiteboard, ...)
+4. Cut out parts of the paper, i.e. figures, tables, paragraphs.
+5. Re-arrange parts on a big surface of choice (floor, table, whiteboard with magnets) until the layout is finished.
+6. Arrange elements in PowerPoint correspondingly.
+7. Collect feedback from people of choice.
+8. rinse-repeat. 
 
 
 ## Reflection and comments
