--- a/_posts/2024-10-25-poster.md
+++ b/_posts/2024-10-25-poster.md
@@ -10,22 +10,48 @@ code_diff: true
 
 You have to prepare a scientific poster and don't know where to start?
 
-Here I describe my approach in creating posters for conferences. 
-While it might not the best approach for everyone, it works for me, and hopefully provides some inspiration for you. 
+Here I describe my approach in creating posters for conferences and scientific meetings based on an already written publication or article. 
 
-## Short Step-by-step Guide
+## Step-by-step Guide
 
 Without focussing on the content too much do the following:
 
-1. Set up a poster template PowerPoint. This provides an empty digital canvas.
+1. Set up a poster template PowerPoint including setting the size appropriately. This provides an empty digital canvas.
 2. Print the publication in color one page layout.
 3. Distribute the single pages in a space (floor, whiteboard, ...)
 4. Cut out parts of the paper, i.e. figures, tables, paragraphs.
 5. Re-arrange parts on a big surface of choice (floor, table, whiteboard with magnets) until the layout is finished.
 6. Arrange elements in PowerPoint correspondingly.
 7. Collect feedback from people of choice.
-8. rinse-repeat. 
+8. Rinse and repeat. Stop when you are satisfied. Avoid infinite loops ;) 
 
+
+### Guide with pictures
+Above you saw the general instructions.
+In the following I will add some visual impressions for some steps from one of my own processes. 
+
+1. poster template:
+When setting up the template in powerpoint it is crucial to select the correct size. You can adjust the slide size under the tab "Design", under "Custom Slide Size", as you can see in the following screen shots. 
+<div class="row">
+    <div class="col-sm mt-2 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/screenshot_pptx01b.png/" title="powerpoint screenshot" class="img-fluid rounded z-depth-1" width="200%" %}
+    </div>
+    <div class="col-sm mt-2 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/screenshot_pptx02.png" title="powerpoint screenshot submenu" class="img-fluid rounded z-depth-1" width="60%" %}
+    </div>
+</div>
+
+3. Distribute print-out pieces on the floor. One of the intermediate steps.
+
+<div style="text-align: center;">
+ {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/floor3.jpg" title="pieces on the floor" class="img-fluid rounded z-depth-1" width="50%" %}
+</div>
+
+1. Final Poster - example
+ 
+ <div style="text-align: center;">
+ {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/2024_05_fg_poster.png" title="final conference poster" class="img-fluid rounded z-depth-1" width="50%" %}
+</div>
 
 ## Reflection and comments
 You might wonder why I use PowerPoint if the paper is written with LaTeX. 
