fixed poster blog post

--- a/_posts/2024-10-25-poster.md
+++ b/_posts/2024-10-25-poster.md
@@ -7,57 +7,70 @@ tags: tools
 categories: work
 code_diff: true
 ---
-
 You have to prepare a scientific poster and don't know where to start?
 
 Here I describe my approach in creating posters for conferences and scientific meetings based on an already written publication or article. 
 
+Aim at creating a concise storyline. 
+Do not put too much on the poster. 
+As a presenter you are supposed to be next to the poster, hence provide a visual guide.I recommend to consider it more a conversation starter than a complete summary of your work. 
+
 ## Step-by-step Guide
 
-Without focussing on the content too much do the following:
+Without focussing too much on the content itself, do the following:
 
-1. Set up a poster template PowerPoint including setting the size appropriately. This provides an empty digital canvas.
-2. Print the publication in color one page layout.
-3. Distribute the single pages in a space (floor, whiteboard, ...)
-4. Cut out parts of the paper, i.e. figures, tables, paragraphs.
-5. Re-arrange parts on a big surface of choice (floor, table, whiteboard with magnets) until the layout is finished.
-6. Arrange elements in PowerPoint correspondingly.
-7. Collect feedback from people of choice.
-8. Rinse and repeat. Stop when you are satisfied. Avoid infinite loops ;) 
-
-
-### Guide with pictures
-Above you saw the general instructions.
-In the following I will add some visual impressions for some steps from one of my own processes. 
-
-1. poster template:
-When setting up the template in powerpoint it is crucial to select the correct size. You can adjust the slide size under the tab "Design", under "Custom Slide Size", as you can see in the following screen shots. 
-<div class="row">
-    <div class="col-sm mt-2 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/screenshot_pptx01b.png/" title="powerpoint screenshot" class="img-fluid rounded z-depth-1" width="200%" %}
+<ol>
+  <li>
+    Verify poster size requirements.
+  </li>
+  <li>
+    Set up a poster template PowerPoint including setting the size appropriately. This provides an empty digital canvas.
+    <p>When setting up the template in PowerPoint, it is crucial to select the correct size. You can adjust the slide size under the tab "Design", under "Custom Slide Size", as you can see in the following screenshots:</p>
+    <div class="row">
+      <div class="col-sm mt-2 mt-md-0">
+          {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/screenshot_pptx01b.png/" title="powerpoint screenshot" class="img-fluid rounded z-depth-1" width="200%" %}
+      </div>
+      <div class="col-sm mt-2 mt-md-0">
+          {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/screenshot_pptx02.png" title="powerpoint screenshot submenu" class="img-fluid rounded z-depth-1" width="60%" %}
+      </div>
     </div>
-    <div class="col-sm mt-2 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/screenshot_pptx02.png" title="powerpoint screenshot submenu" class="img-fluid rounded z-depth-1" width="60%" %}
+  </li>
+  <li>
+    Print the publication in color one-page layout.
+  </li>
+  <li>
+    Distribute the single pages in a space (floor, whiteboard, ...).
+  </li>
+  <li>
+    Cut out parts of the paper, i.e., figures, tables, paragraphs.
+  </li>
+  <li>
+    Re-arrange parts on a big surface of choice (floor, table, whiteboard with magnets) until the layout is finished.
+    <div style="text-align: center;">
+      {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/floor3.jpg" title="pieces on the floor" class="img-fluid rounded z-depth-1" width="50%" %}
     </div>
-</div>
-
-3. Distribute print-out pieces on the floor. One of the intermediate steps.
-
+  </li>
+  <li>
+    Arrange elements in PowerPoint accordingly.
+  </li>
+  <li>
+    Collect feedback from people of your choice.
+  </li>
+  <li>
+    Rinse and repeat. Stop when you are satisfied. Avoid infinite loops ;)
+  </li>
+</ol>
+<p>Here is one example of a poster which I created for a conference:</p>
 <div style="text-align: center;">
- {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/floor3.jpg" title="pieces on the floor" class="img-fluid rounded z-depth-1" width="50%" %}
+  {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/2024_05_fg_poster.png" title="final conference poster" class="img-fluid rounded z-depth-1" width="50%" %}
 </div>
 
-1. Final Poster - example
- 
- <div style="text-align: center;">
- {% include figure.liquid loading="eager" path="assets/img/2024_10_25_poster/2024_05_fg_poster.png" title="final conference poster" class="img-fluid rounded z-depth-1" width="50%" %}
-</div>
 
 ## Reflection and comments
 You might wonder why I use PowerPoint if the paper is written with LaTeX. 
-In fact in the past I used LaTeX, but found PowerPoint more flexible, because:
-1. it is WYSIWYG (what you see is what you get). 
-2. I like to move pictures, and textboxes freely by hand, and feel that it gives me more flexibility and less troubles than LaTeX.
+In fact in the past during my PhD I used LaTeX, but found PowerPoint more flexible, because:
+1. It is WYSIWYG (what you see is what you get). 
+2. I like to move pictures, and textboxes freely by hand. I feel that this approach gives me more flexibility and less troubles than LaTeX. 
 3. Equations: In the past I used LaTeX for posters specifically because it was easier to write equations. However, since I discovered the plugin IguanaTex for PowerPoint, this sealed the deal for me.
 
 In conclusion: PowerPoint might not the best tool for posters in general, but it works for me.
