--- a/_posts/2024-06-17-tools.md
+++ b/_posts/2024-06-17-tools.md
@@ -3,8 +3,8 @@ layout: post
 title: Tools which make your life easier
 date: 2024-06-17 18:30:00
 description: This is a growing list of tools which I find helpful.
-tags: productivity
-categories: tools
+categories: "Productivity & Tools"
+tags: software
 code_diff: true
 ---
 
