--- a/_posts/2024-10-25-poster.md
+++ b/_posts/2024-10-25-poster.md
@@ -3,8 +3,8 @@ layout: post
 title: How I create scientific posters
 date: 2024-10-25 18:00:00
 description: My approach on creating posters for conferences and research events.
-tags: tools
-categories: work
+categories: "Research & Knowledge"
+#tags: 
 code_diff: true
 ---
 You have to prepare a scientific poster and don't know where to start?
