--- a/_posts/2025-01-03-grateful.md
+++ b/_posts/2025-01-03-grateful.md
@@ -2,9 +2,10 @@
 layout: post
 title: Being Grateful
 date: 2025-01-03 12:00:00
-description: reflection
-tags: mentalhealth
-categories: private
+description: Personal reflections about being grateful and pausing.
+categories: "Personal Reflections"
+tags: ["mental health", "mindset"]
+image: "assets/img/blog/winter_window_sunrise.png"
 code_diff: true
 ---
 
