--- a/_news/news_2024_10_24.md
+++ b/_news/news_2024_10_24.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-I am very much looking forward to attending the [Danish Digitalization, Data Science and AI 2.09 conference](https://d3aconference.dk/). While I have attended before, this time I will be contributing as a co-host of the poster session on Tuesday, and to interesting session on Wednesday: [overcoming the valley of death in AI-assisted preventive mental-health technology](https://d3aconference.dk/overcoming-the-valley-of-death-in-ai-assisted-preventive-mental-health-technology/). 
+I am very much looking forward to attending the [Danish Digitalization, Data Science and AI 2.0 conference](https://d3aconference.dk/d3a-2-0/). While I have attended before, this time I will be contributing as a co-host of the poster session on Tuesday, and to interesting session on Wednesday: [overcoming the valley of death in AI-assisted preventive mental-health technology](https://d3aconference.dk/overcoming-the-valley-of-death-in-ai-assisted-preventive-mental-health-technology/). 
