--- a/_news/news_2025_03_10.md
+++ b/_news/news_2025_03_10.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Today, [Luiza](https://en.itu.dk/Research/PhD-Programme/PhD-Defences/PhD-Defences-2025/March/Luiza-Ribeiro-Marnet) is defending her PhD thesis about "Vision-based classification for underwater safety critical applications"! It was a great pleasure being part of this journey. 
+Today, [Luiza](https://en.itu.dk/Research/PhD-Programme/PhD-Defences/PhD-Defences-2025/March/Luiza-Ribeiro-Marnet) is defending her PhD thesis "Vision-based classification for underwater safety critical applications" at ITU! It was a great pleasure being part of her journey. 
