--- a/_news/news_2025_07_17.md
+++ b/_news/news_2025_07_17.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-Leo's paper "From Sound to Sight: Towards AI-authored Music Videos" was accepted for publication at the [ICCV 2025](https://iccv.thecvf.com/) Workshop "AISTORY"! (Arxiv link will be added.)
+Leo's paper ["From Sound to Sight: Towards AI-authored Music Videos"](https://arxiv.org/abs/2509.00029) was accepted for publication at the [ICCV 2025](https://iccv.thecvf.com/) Workshop "AISTORY"!
