--- a/_posts/2024-10-25-poster.md
+++ b/_posts/2024-10-25-poster.md
@@ -4,7 +4,7 @@ title: How I create scientific posters
 date: 2024-10-25 18:00:00
 description: My approach on creating posters for conferences and research events.
 categories: "Research & Knowledge"
-#tags: 
+tags: "conferences"
 code_diff: true
 ---
 You have to prepare a scientific poster and don't know where to start?
